--- a/src/main/resources/static/Login/login.html
+++ b/src/main/resources/static/Login/login.html
@@ -52,7 +52,7 @@
         <div class="login-container">
             <div class="logo">
                 <a href="/">
-                    <img src="/images/photo5-modified.png" alt="JECA Cracker Logo">
+                    <img src="../images/image1.png" alt="Byte2ByteLearn Logo">
                 </a>
                 <h2 class="mt-3">Welcome Back</h2>
                 <p class="text-muted">Sign in to continue to your account</p>
